--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  
+  font-family: "Microsoft YaHei", "\5FAE\8F6F\96C5\9ED1", "\5B8B\4F53", "Tahoma","Arial";
 }
 /*美化webkit内核滚动条*/
 ::-webkit-scrollbar {
@@ -12,9 +12,6 @@
 
 .ant-table-thead > tr > th, .ant-table-tbody > tr > td {
   padding: 16px 0;
-  font-size: 12px !important;
-}
-
-.ant-btn-sm {
-  /* font-size: 12px; */
+  font-size: 12px;
+  color: #38424F;
 }
