--- a/src/views/Login/style.less
+++ b/src/views/Login/style.less
@@ -6,12 +6,13 @@
   width: 100%;
   background-color: #2d3a4b;
   &-form {
-    position: absolute;
-    left: 0;
-    right: 0;
+    position: relative;
     width: 420px;
     padding: 35px 35px 15px 35px;
-    margin: 120px auto;
+    margin: 0 auto;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 4px;
   }
   &-title {
     font-size: 26px;
